welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: illegal start of simple pattern
  var new Array liste[Int](num)
      ^golomb:4: error: '=' expected but ';' found.
  var indice = 1
^